players can be targeted